apps/cyberchef/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  namespace: cyberchef
spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: cyberchef
  type: ClusterIP
