apps/cyberchef/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyberchef
  namespace: cyberchef
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: authentik-ak-outpost-authentik-embedded-outpost@kubernetescrd
    cf.containeroo.ch/type: CNAME
    cf.containeroo.ch/content: ${BASE_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: cyberchef.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cyberchef
                port:
                  name: http
